--- a/finalcvnoelia.html
+++ b/finalcvnoelia.html
@@ -20,7 +20,7 @@
             </h2>
     
             <div class="recabout">
-                <h3 id="textabout">My name Noelia Gargallo Arroyo amd I am a
+                <h3 id="textabout">My name is Noelia Gargallo Arroyo amd I am a
                      Computer engineering student. In this CV I show my Back-end,
                       Front-end, Ui/Ux skills, among others. I have great problem-solving
                      skills and experience doing projects both as a team and alone.
